#
# SPDX-FileCopyrightText: 2010-2022 by Gilles Caulier, <caulier dot gilles at gmail dot com>
#
# SPDX-License-Identifier: BSD-3-Clause
#

add_subdirectory(convert)
add_subdirectory(custom)
add_subdirectory(decorate)
add_subdirectory(metadata)
add_subdirectory(transform)
add_subdirectory(filters)
add_subdirectory(enhance)
add_subdirectory(colors)
