#
# SPDX-FileCopyrightText: 2010-2022 by Gilles Caulier, <caulier dot gilles at gmail dot com>
#
# SPDX-License-Identifier: BSD-3-Clause
#

# NOTE: Native plugin use internal libraw from digiKam core.
add_subdirectory(native)
add_subdirectory(ufraw)
add_subdirectory(rawtherapee)
add_subdirectory(darktable)
add_subdirectory(art)
